--- a/car-details.html
+++ b/car-details.html
@@ -38,7 +38,7 @@
   <nav class="navbar navbar-default">
     <div class="container ">
     <div class=" col-md-3 col-sm-3 mt20">
-      <a href="#" class=""><img class="img-responsive" alt="Logo" src="assets/images/Logo.png"></a>
+      <a href="#" class=""><img class="img-responsive" alt="Logo" src="assets/images/OQIC_Logo.png"></a>
     </div>
 
 
