--- a/home-oman.html
+++ b/home-oman.html
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="assets/images/Logo.png" alt="Logo" class="img-responsive">
+        <a class="navbar-brand" href="#"><img src="assets/images/OQIC_Logo.png" alt="Logo" class="img-responsive">
         </a>
       </div>
 
