--- a/car-details.html
+++ b/car-details.html
@@ -141,7 +141,7 @@
 				
 					<div class="col-md-4 col-xs-12 col-md-12 mb10 nolrpadding">
 						<div class=" col-md-4 col-sm-4 col-xs-12">
-					    	<label class="form-label-name mt5" for="test15">Qatar ID<span class="required">*</span> <i class="fa fa-info-circle fa-info-circle-color " aria-hidden="true" data-toggle="tooltip" title="Qatar ID"></i></label>
+					    	<label class="form-label-name mt5" for="test15">Oman ID<span class="required">*</span> <i class="fa fa-info-circle fa-info-circle-color " aria-hidden="true" data-toggle="tooltip" title="Qatar ID"></i></label>
 					    </div>
 					    <div class="col-md-8 col-sm-8 col-xs-12">
 					    	<input type="text" id="tes15t" class="form-control col-md-6 col-sm-6 col-xs-6 nolrpadding form-input-name">
@@ -206,8 +206,12 @@
 	</div>
 	<div class="row ml-0 mr-0 mt10">
 				<div class="container">
+				<div>
 					<h1 class="brd-btm personal-detal-heading">DRIVER DETAILS</h1>
-			<form>	
+					<i class="fa fa-plus-square pull-right button-add" type="button" style="margin-top:-37px; color: #48659F;font-size: 24px;" aria-hidden="true"></i>
+				</div>
+
+			<form  class="form-group box">	
 				<div class="col-md-12 col-sm-12 col-xs-12 nolrpadding mb5 mt10">
 
 					<div class="col-md-4 col-xs-12 col-md-12 mb10 nolrpadding">
@@ -220,7 +224,7 @@
 					</div>
 					<div class="col-md-4 col-xs-12 col-md-12 mb10 nolrpadding">
 						<div class="col-md-4 col-sm-4 col-xs-12">
-					    	<label class="form-label-name mt5" for="test15">Qatar ID<span class="required">*</span> <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="Qatar ID"></i></label>
+					    	<label class="form-label-name mt5" for="test15">Oman ID<span class="required">*</span> <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="Qatar ID"></i></label>
 					    </div>
 					    <div class="col-md-8 col-sm-8 col-xs-12">
 					    	<input type="text" id="tes15t" class="form-control form-input-name">
@@ -231,7 +235,12 @@
 					    	<label class="form-label-name mt5" for="test14">Contract Expiry Date<span class="required">*</span></label>
 					    </div>
 					    <div class="col-md-8 col-sm-8 col-xs-12">
+					    	<div class="col-md-8 col-sm-8 col-xs-12 nolrpadding" style="width:100%;">
 					    	<input type="text" id="test14" class="form-control form-input-name">
+					    	</div>
+					    	<div style="position:absolute; right:0">
+					    	<i class="fa fa-times button-remove" style="color:#AB1D35;" aria-hidden="true"></i>
+					    	</div>
 						</div>
 					</div>
 				</div>	
@@ -248,8 +257,10 @@
 						<div class=" col-md-4 col-sm-4 col-xs-12">
 					    	<label class="form-label-name mt5" for="test21">Start Date<span class="required">*</span></label>
 					    </div>
-					    <div class="col-md-8 col-sm-8 col-xs-12 input-group date mb10 nolrpadding" id="datetimepicker1">
+					    <div class="col-md-8 col-sm-8 col-xs-12" >
+					    <div class="input-group date mb10 nolrpadding" id="datetimepicker1">
                 			<input type="text"  class="border-none form-control form-input-name" />	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+            			</div>
             			</div>
 					</div>
 					<div class="col-md-4 col-xs-12 col-md-12 mb10 nolrpadding">
