Car-details page

--- a/policy-wordings.html
+++ b/policy-wordings.html
@@ -241,7 +241,8 @@
             <img src="assets/images/banner/c1.png" class="image-policy-wording" alt="Logo" class="img-responsive">
           </div>
           <div class="image-policy-text-bg">
-          <input type="text" id="test17">
+         
+          <label>Comprehensive</label>
           </div>
           </div>
         </div>
